added random-route option

--- a/manifest.yml
+++ b/manifest.yml
@@ -2,5 +2,6 @@ applications:
 - name: worldcities
   memory: 256M
   command: python worldcities.py
+  random-route: true
   services:
   - sqldatabase
